--- a/far-away/src/index.css
+++ b/far-away/src/index.css
@@ -1,13 +1,65 @@
+@import url("https://fonts.googleapis.com/css2?family=Monoton&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+h1 {
+  font-family: "Monoton", sans-serif;
+  color: #4c3423;
+  font-size: 3rem;
+  font-weight: 500;
+  text-align: center;
+  background-color: #f19720;
+  padding: 0.5em 0;
+}
+
+.form select,
+.form button,
+.form input {
+  border: none;
+  outline: none;
+  padding: 0.7em 1.5em;
+  border-radius: 20px;
+}
+
+button,
+select {
+  cursor: pointer;
+}
+
+.buttons button,
+.buttons select {
+  border: none;
+  outline: none;
+  padding: 0.5em 1.2em;
+  border-radius: 20px;
+  color: #4c3423;
+  font-weight: 600;
+}
+
+.items {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+}
+
+.items div {
+  padding: 1.5em;
+  place-self: center;
 }
