--- a/eat'n'split/src/App.css
+++ b/eat'n'split/src/App.css
@@ -5,38 +5,86 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.app {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+  gap: 50px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.left-sec > * {
+  margin-block: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.friendsList {
+  /* display: flex; */
 }
 
-.card {
-  padding: 2em;
+.friend {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  margin-block: 15px;
 }
 
-.read-the-docs {
-  color: #888;
+.friend img {
+  width: 50px;
+  border-radius: 50%;
+}
+
+.friend > .info {
+  text-align: start;
+}
+
+.friend > .info > p:first-child {
+  font-weight: bold;
+}
+
+.friend > .info > p:last-child {
+  font-size: 0.8rem;
+}
+
+button {
+  border: none;
+  outline: none;
+  background-color: #fd9e40;
+  color: black;
+  padding: 0.5em 0.8em;
+  border-radius: 8px;
+  cursor: pointer;
+  margin-left: 20px;
+}
+
+.addFriend {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 0.5em;
+}
+
+.addFriend button {
+  align-self: flex-end;
+}
+
+.addFriend button,
+.addFriend input {
+  width: 150px;
+}
+
+.addFriend input {
+  border: none;
+  outline: none;
+  padding: 0.5em 0.7em;
+}
+
+.addFriend label {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.addFriend > * {
+  margin-block: 10px;
 }
