--- a/eat'n'split/src/App.css
+++ b/eat'n'split/src/App.css
@@ -10,6 +10,7 @@
   align-items: center;
   margin-top: 50px;
   gap: 50px;
+  padding: 2.5em;
 }
 
 .left-sec > div {
@@ -26,6 +27,9 @@
 
 .friend img {
   width: 50px;
+  height: 50px;
+  object-fit: cover;
+  object-position: center;
   border-radius: 50%;
 }
 
@@ -137,7 +141,16 @@ button {
   background-color: #fcf2e0;
 }
 
+.friend.active {
+  background-color: #fcf2e0;
+}
+
 h1 {
   position: absolute;
   top: 5%;
+  font-size: 3rem;
+  color: #fd9e40;
+  border-bottom: 4px solid #fd9e40;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
